# sherlock

./: .gitignore  .pyproject.toml  README.md  dockerfile  setup.cfg  setup.py  task-definition.json
.github/workflows/: sherlock-package.yml
env_test/: pyvenv.cfg
src/sherlock/: __init__.py  core.py
test/: test_core.py
tests/: __init__.py  test_core.py
