# setup.cfg
[metadata]
name = my_package
version = 0.1.0
author = Anvi Alex E. 
author_email = epononanvi@gmail.com
description = Sherlock helps you get everything an Abstract hides with a fast technical description card (Research questions, contribution, possible future works) of an NLP paper before reading it.  
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anvix9/sherlock
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src


